practice-yaml/multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ussdapp1
  labels:
    env: dev
    tier: frontend
spec:
  containers:
  - name: nginx1
    image: nginx
    ports:
    - containerPort: 80
  - name: tomcat1
    image: tomcat
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: ussdapp2
  labels:
    env: dev
    tier: frontend
spec:
  containers:
  - name: nginx1
    image: nginx
    ports:
    - containerPort: 80
  - name: tomcat1
    image: tomcat
    ports:
    - containerPort: 8080
