practice-yaml/resourcelimit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ussdapp1
  labels:
    env: dev
    tier: frontend
spec:
  replicas: 5
  selector:
     matchLabels:
        tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: nginx1
        image: nginx:1.16
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "15Mi"
            cpu: "0.2"
          limits:
            memory: "30Mi"
            cpu: "1"
      - name: tomcat1
        image: tomcat
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "10Mi"
            cpu: "0.2"
          limits:
            memory: "20Mi"
            cpu: "1"
