practice-yaml/single-pod-single-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ussdapp1
  labels:
    env: dev
    tier: frontend
spec:
  containers:
  - name: nginx1
    image: nginx
    ports:
    - containerPort: 80
