practice-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    tier: frontend
  ports:
  - port: 1024
    name: nginx
    targetPort: 80
  - port: 1025
    name: tomcat
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    tier: backend
  ports:
  - port: 1024
    name: nginx
    targetPort: 80
  - port: 1025
    name: tomcat
    targetPort: 8080
