practice-yaml/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rewrite
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.com
    http:
      paths:
      - path: /nginx(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port: 
              number: 1024
  #- host: frontend.com
  #  http:
  #    paths:
      - path: /tomcat(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 1025
